--- a/notekeeper.cabal
+++ b/notekeeper.cabal
@@ -18,13 +18,14 @@ library
    , ObjcFunPtr
    , ObjcClassManipulations
    , Objc
+   , Gcd
    , Window
---   , Ui
+   , Ui
    , Menu
---   , View.Color
---   , View.Image
---   , View.Label
---   , View.View
+   , View.View
+   , View.Color
+   , View.Image
+   , View.Label
   c-sources:
      src/funcSt.c
    , src/objc_msgSendN.c
@@ -32,5 +33,13 @@ library
   build-depends:
      base
    , containers
+--   , aeson
+   , vector
+--   , vector-algorithms
+--   , megaparsec
+--   , network
+--   , lens
+--   , transformers == 0.5.6.2
+--   , distributive
   hs-source-dirs: src
   default-language: Haskell2010
