--- a/Info.plist
+++ b/Info.plist
@@ -43,5 +43,7 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
+	<key>NSCameraUsageDescription - 2</key>
+	<string>We need it to take pictures of rectangles</string>
 </dict>
 </plist>
