--- a/notekeeper.cabal
+++ b/notekeeper.cabal
@@ -6,51 +6,51 @@ maintainer: email@example.com
 
 library
   exposed-modules:
-     App
-   , AvHelpers
-   , Camera
-   , IOHelpers
-   , HsMain
-   , ObjcTypes
-   , ObjcMsgSt
-   , ObjcMsgOps
-   , ObjcMsgHelpers
-   , ObjcMsg
-   , ObjcMixStorage
-   , ObjcGlobalMixStorage
-   , ObjcHelpers
-   , ObjcFunPtr
-   , ObjcClassManipulations
-   , Objc
-   , Tree
-   , UiKit
-   , UiKitHelpers
-   , UiKitText
-   , Gcd
-   , Window
-   , Ui
-   , Menu
-   , View.Color
-   , View.Image
-   , View.Label
-   , View.Layout
-   , View.View
+    App
+    AvHelpers
+    Camera
+    CurrentTime
+    Gcd
+    HsMain
+    IOHelpers
+    Objc
+    ObjcClassManipulations
+    ObjcFunPtr
+    ObjcGlobalMixStorage
+    ObjcHelpers
+    ObjcMixStorage
+    ObjcMsg
+    ObjcMsgHelpers
+    ObjcMsgOps
+    ObjcMsgSt
+    ObjcTypes
+    Tree
+    Ui
+    UiKit
+    UiKitHelpers
+    UiKitText
+    View.Color
+    View.Image
+    View.Label
+    View.Layout
+    View.View
   c-sources:
-     src/funcSt.c
-   , src/objc_msgSendN.c
-   , src/getCurrentTime.c
+    src/funcSt.c
+    src/objc_msgSendN.c
+    src/getCurrentTime.c
   build-depends:
-     base
-   , containers
-   , random
---   , aeson
-   , vector
-   , numeric-limits
---   , vector-algorithms
---   , megaparsec
---   , network
---   , lens
---   , transformers == 0.5.6.2
---   , distributive
+    base,
+    containers,
+    random,
+    -- vector,
+    numeric-limits,
+   
+--   aeson
+--   vector-algorithms
+--   megaparsec
+--   network
+--   lens
+--   transformers == 0.5.6.2
+--   distributive
   hs-source-dirs: src
   default-language: Haskell2010
