--- a/notekeeper.cabal
+++ b/notekeeper.cabal
@@ -38,6 +38,9 @@ library
     src/funcSt.c
     src/objc_msgSendN.c
     src/getCurrentTime.c
+--  ghc-options:
+--   -optc -I/Applications/Xcode.app/Contents/Developer/Platforms/iPhoneOS.platform/Developer/SDKs/iPhoneOS.sdk/usr/include
+--   -optl -L/Applications/Xcode.app/Contents/Developer/Platforms/iPhoneOS.platform/Developer/SDKs/iPhoneOS.sdk/usr/lib
   build-depends:
     base,
     containers,
