--- a/notekeeper.xcodeproj/xcshareddata/xcschemes/notekeeper.xcscheme
+++ b/notekeeper.xcodeproj/xcshareddata/xcschemes/notekeeper.xcscheme
@@ -50,6 +50,18 @@
             ReferencedContainer = "container:notekeeper.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
+      <EnvironmentVariables>
+         <EnvironmentVariable
+            key = "OS_ACTIVITY_MODE"
+            value = "disable"
+            isEnabled = "YES">
+         </EnvironmentVariable>
+         <EnvironmentVariable
+            key = "CFNETWORK_DIAGNOSTICS"
+            value = "3"
+            isEnabled = "YES">
+         </EnvironmentVariable>
+      </EnvironmentVariables>
    </LaunchAction>
    <ProfileAction
       buildConfiguration = "Release"
