use new compiler

--- a/notekeeper.xcodeproj/xcshareddata/xcschemes/notekeeper.xcscheme
+++ b/notekeeper.xcodeproj/xcshareddata/xcschemes/notekeeper.xcscheme
@@ -50,6 +50,16 @@
             ReferencedContainer = "container:notekeeper.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
+      <CommandLineArguments>
+         <CommandLineArgument
+            argument = "+RTS -N4 -RTS"
+            isEnabled = "NO">
+         </CommandLineArgument>
+         <CommandLineArgument
+            argument = "+RTS -N4 --arbitrary-heap-start -RTS"
+            isEnabled = "NO">
+         </CommandLineArgument>
+      </CommandLineArguments>
       <EnvironmentVariables>
          <EnvironmentVariable
             key = "OS_ACTIVITY_MODE"
