--- a/modules/Utils/Utils.cabal
+++ b/modules/Utils/Utils.cabal
@@ -1,12 +1,12 @@
 cabal-version: 2.4
-name: Module1
+name: Utils
 version: 0.1.0.0
 author: username
 maintainer: email@example.com
 
 library
   exposed-modules:
-    Module1
+    Utils
   ghc-options:
 --   -optc -I/Applications/Xcode.app/Contents/Developer/Platforms/iPhoneOS.platform/Developer/SDKs/iPhoneOS.sdk/usr/include
 --   -optl -L/Applications/Xcode.app/Contents/Developer/Platforms/iPhoneOS.platform/Developer/SDKs/iPhoneOS.sdk/usr/lib
@@ -14,7 +14,6 @@ library
     base,
     --containers,
     random,
-    Utils,
     -- vector,
     -- numeric-limits,
     -- time,
