--- a/modules/Ui/Ui.cabal
+++ b/modules/Ui/Ui.cabal
@@ -1,12 +1,12 @@
-cabal-version: 2.4
-name: Module1
+cabal-version: 3.8
+name: Ui
 version: 0.1.0.0
 author: username
 maintainer: email@example.com
 
 library
   exposed-modules:
-    Module1
+    Ui
   ghc-options:
 --   -optc -I/Applications/Xcode.app/Contents/Developer/Platforms/iPhoneOS.platform/Developer/SDKs/iPhoneOS.sdk/usr/include
 --   -optl -L/Applications/Xcode.app/Contents/Developer/Platforms/iPhoneOS.platform/Developer/SDKs/iPhoneOS.sdk/usr/lib
@@ -14,8 +14,7 @@ library
     base,
     --containers,
     random,
-    Utils,
-    Ui,
+    Objc,
     -- vector,
     -- numeric-limits,
     -- time,
@@ -28,4 +27,4 @@ library
 --   transformers == 0.5.6.2
 --   distributive
   hs-source-dirs: src
-  default-language: Haskell2010
+  default-language: GHC2021
