--- a/modules/Ui/cabal.project
+++ b/modules/Ui/cabal.project
@@ -1,2 +1,2 @@
 packages:
-    ./ ./../Objc/*.cabal
+    ./ ./../View/*.cabal ./../Camera/*.cabal ./../IOHelpers/*.cabal ./../Gcd/*.cabal ./../UiKit/*.cabal ./../Objc/*.cabal
