--- a/modules/Module1/Module1.cabal
+++ b/modules/Module1/Module1.cabal
@@ -14,11 +14,18 @@ library
     base,
     --containers,
     random,
+
+    Objc,
     Utils,
     Ui,
+    Gcd,
+    View,
+    UiKit,
     -- vector,
     -- numeric-limits,
     -- time,
+  c-sources:
+    src/module1_state.c
    
 --   aeson
 --   vector-algorithms
