--- a/root/root.cabal
+++ b/root/root.cabal
@@ -1,28 +1,20 @@
-cabal-version: 2.4
+cabal-version: 3.8
 name: root
 version: 0.1.0.0
 author: username
 maintainer: email@example.com
 
 library
-  exposed-modules:
-
-  c-sources:
   build-depends:
-    base,
-    containers,
-    random,
-    -- vector,
-    numeric-limits,
-    time,
-
-    Objc,
-    UiKit,
     Camera,
-    View,
-    Ui,
-    Utils,
+    Gcd,
+    IOHelpers,
     Module1,
     Module2,
-  hs-source-dirs: src
-  default-language: Haskell2010
+    Objc,
+    Ui,
+    UiKit,
+    Utils,
+    View,
+    notekeeper,
+    Module2,
