--- a/root/root.cabal
+++ b/root/root.cabal
@@ -7,6 +7,7 @@ maintainer: email@example.com
 library
   build-depends:
     Camera,
+    ClothingView,
     Gcd,
     IOHelpers,
     Module1,
@@ -16,5 +17,6 @@ library
     UiKit,
     Utils,
     View,
+    Wardrobe,
     notekeeper,
     Module2,
